--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <base href=".." />
-    <title>Vite + Svelte</title>
+    <title>MicroLab Joystick</title>
   </head>
   <body>
     <div id="app" class="w-full h-full"></div>
